# Rtfm-Bot

./: .gitignore  B.py  BotConfig.py  LICENSE  README.md  bot.db  data.sql  example.env  main.py  pyproject.toml  reference.txt  requirements.txt
.github/workflows/: ci.yml  codeql.yml  scan.yml
cogs/: __init__.py  jsk.py  listeners.py  rtfm.py  rtfm_slash.py  slash.py
slash/: __init__.py
utils/: __init__.py  extra.py  fuzzy.py  simple_paginator.py  views.py
